--- a/hi.html
+++ b/hi.html
@@ -6,6 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Congratulation the chiti goes to {{name}}</p>
+    <h1 style="background-color: crimson;;font-size: 60px;;text-align: center;">CHITI MEMBERS</h1>
+    <h1>1.  M.Sujatha<br>2.  M.Dinesh<br>3.  N.Swathi<br>4.  N.Naveen<br>5.  N.Kishore<br>6.  SK.Kayyum<br>7.  SK.Ibbu<br>8.  SK.Rabbbai<br>9.  J.Anusha<br>10.  J.Sreelatha</h1>
+    <form action="/chiti" method="get">
+        <label for="id"><h1 style="text-align: center;font-size: 35px;"><b>Good luck...</b></h1></label>
+        <h1 style="text-align: center;"><input type="submit" value="Go"></h1>
+       </form>
+    <h1 style="text-align: center;;color:crimson">Congratulations the chiti goes to : "  {{name}}  "</h1>
 </body>
-</html>
+</html> 
